--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                         <div class="col-lg-4 col-md-6 col-12" data-aos="fade-down">
                            <div class="listing-item">
                               <div class="listing-img">
-                                 <img src="assets/img/sazuki apv.webp" class="img-fluid" alt="Suzuki Apv ">
+                                 <img src="assets/img/suzukiapv.webp" class="img-fluid" alt="Suzuki Apv ">
                                  <div class="fav-item">
                                     <!-- <span class="featured-text">BMW</span> -->
                                     </a>
