--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                                        Honda Civic or City
                                     </h3>
                                  </div>
-								 <p style="text-align: center;">Available for Rent, Tours & Events Pic & Drop</p><br>
+								 <p style="text-align: center;">Available For Rent, Tour's, Event's, Pick & Drop</p><br>
                                  <div class="button-row button-row1">
                                     <button class="button btn-phone"><span><i class="feather-phone-call"></i></span><a href="tel:+923331003473" style="color: #fff;"> Call Us</a></button>
 
@@ -193,7 +193,7 @@
                                        Toyota GLI or XLI
                                     </h3>
                                  </div>
-                                 <p style="text-align: center;">Available for Rent, Tours & Events Pic & Drop</p><br>
+                                 <p style="text-align: center;">Available For Rent, Tour's, Event's, Pick & Drop</p><br>
                                  <div class="button-row button-row1">
                                     <button class="button btn-phone"><span><i class="feather-phone-call"></i></span><a href="tel:+923331003473" style="color: #fff;"> Call Us</a></button>
                                     <button class="button btn-whataspp">
@@ -228,7 +228,7 @@
                                        Toyota Alits or Yaris
                                     </h3>
                                  </div>
-                                 <p style="text-align: center;">Available for Rent, Tours & Events Pic & Drop</p><br>
+                                 <p style="text-align: center;">Available For Rent, Tour's, Event's, Pick & Drop</p><br>
                                  <div class="button-row button-row1">
                                     <button class="button btn-phone"><span><i class="feather-phone-call"></i></span><a href="tel:+923331003473" style="color: #fff;"> Call Us</a></button>
                                     <button class="button btn-whataspp">
@@ -278,7 +278,7 @@
                                        Honda BR-V 
                                     </h3>
                                  </div>
-                                 <p style="text-align: center;">Available for Rent, Tours & Events Pic & Drop</p><br>
+                                 <p style="text-align: center;">Available For Rent, Tour's, Event's, Pick & Drop</p><br>
                                  <div class="button-row button-row1">
                                     <button class="button btn-phone"><span><i class="feather-phone-call"></i></span><a href="tel:+923331003473" style="color: #fff;"> Call Us</a></button>
                                     <button class="button btn-whataspp">
@@ -313,7 +313,7 @@
                                        Suzuki Apv 
                                     </h3>
                                  </div>
-                                 <p style="text-align: center;">Available for Rent, Tours & Events Pic & Drop</p><br>
+                                 <p style="text-align: center;">Available For Rent, Tour's, Event's, Pick & Drop</p><br>
                                  <div class="button-row button-row1">
                                     <button class="button btn-phone"><span><i class="feather-phone-call"></i></span><a href="tel:+923331003473" style="color: #fff;"> Call Us</a></button>
                                     <button class="button btn-whataspp">
@@ -348,7 +348,7 @@
                                        Chinghan_karwan 
                                     </h3>
                                  </div>
-                                 <p style="text-align: center;">Available for Rent, Tours & Events Pic & Drop</p><br>
+                                 <p style="text-align: center;">Available For Rent, Tour's, Event's, Pick & Drop</p><br>
                                  <div class="button-row button-row1">
                                     <button class="button btn-phone"><span><i class="feather-phone-call"></i></span><a href="tel:+923331003473" style="color: #fff;"> Call Us</a></button>
                                     <button class="button btn-whataspp">
@@ -382,7 +382,7 @@
                                        Toyota_Hiace
                                     </h3>
                                  </div>
-                                 <p style="text-align: center;">Available for Rent, Tours & Events Pic & Drop</p><br>
+                                 <p style="text-align: center;">Available For Rent, Tour's, Event's, Pick & Drop</p><br>
                                  <div class="button-row button-row1">
                                     <button class="button btn-phone"><span><i class="feather-phone-call"></i></span><a href="tel:+923331003473" style="color: #fff;"> Call Us</a></button>
 
@@ -420,7 +420,7 @@
                                        GRAND_CABIN
                                     </h3>
                                  </div>
-                                 <p style="text-align: center;">Available for Rent, Tours & Events Pic & Drop</p><br>
+                                 <p style="text-align: center;">Available For Rent, Tour's, Event's, Pick & Drop</p><br>
                                  <div class="button-row button-row1">
                                     <button class="button btn-phone"><span><i class="feather-phone-call"></i></span><a href="tel:+923331003473" style="color: #fff;"> Call Us</a></button>
                                     <button class="button btn-whataspp">
@@ -455,7 +455,7 @@
                                        Coaster
                                     </h3>
                                  </div>
-                                 <p style="text-align: center;">Available for Rent, Tours & Events Pic & Drop</p><br>
+                                 <p style="text-align: center;">Available For Rent, Tour's, Event's, Pick & Drop</p><br>
                                  <div class="button-row button-row1">
                                     <button class="button btn-phone"><span><i class="feather-phone-call"></i></span><a href="tel:+923331003473" style="color: #fff;"> Call Us</a></button>
                                     <button class="button btn-whataspp">
@@ -505,7 +505,7 @@
                                        Prado 
                                     </h3>
                                  </div>
-                                 <p style="text-align: center;">Available for Rent, Tours & Events Pic & Drop</p><br>
+                                 <p style="text-align: center;">Available For Rent, Tour's, Event's, Pick & Drop</p><br>
                                  <div class="button-row button-row1">
                                     <button class="button btn-phone"><span><i class="feather-phone-call"></i></span><a href="tel:+923331003473" style="color: #fff;"> Call Us</a></button>
                                     <button class="button btn-whataspp">
@@ -540,7 +540,7 @@
                                        V8 land cruiser 
                                     </h3>
                                  </div>
-                                 <p style="text-align: center;">Available for Rent, Tours & Events Pic & Drop</p><br>
+                                 <p style="text-align: center;">Available For Rent, Tour's, Event's, Pick & Drop</p><br>
                                  <div class="button-row button-row1">
                                     <button class="button btn-phone"><span><i class="feather-phone-call"></i></span><a href="tel:+923331003473" style="color: #fff;"> Call Us</a></button>
                                     <button class="button btn-whataspp">
@@ -575,7 +575,7 @@
                                        Revo or Vigo 
                                     </h3>
                                  </div>
-                                 <p style="text-align: center;">Available for Rent, Tours & Events Pic & Drop</p><br>
+                                 <p style="text-align: center;">Available For Rent, Tour's, Event's, Pick & Drop</p><br>
                                  <div class="button-row button-row1">
                                     <button class="button btn-phone"><span><i class="feather-phone-call"></i></span><a href="tel:+923331003473" style="color: #fff;"> Call Us</a></button>
                                     <button class="button btn-whataspp">
@@ -609,7 +609,7 @@
                                        BMW
                                     </h3>
                                  </div>
-                                 <p style="text-align: center;">Available for Rent, Tours & Events Pic & Drop</p><br>
+                                 <p style="text-align: center;">Available For Rent, Tour's, Event's, Pick & Drop</p><br>
                                  <div class="button-row button-row1">
                                     <button class="button btn-phone"><span><i class="feather-phone-call"></i></span><a href="tel:+923331003473" style="color: #fff;"> Call Us</a></button>
 
@@ -647,7 +647,7 @@
                                        AUDI 
                                     </h3>
                                  </div>
-                                 <p style="text-align: center;">Available for Rent, Tours & Events Pic & Drop</p><br>
+                                 <p style="text-align: center;">Available For Rent, Tour's, Event's, Pick & Drop</p><br>
                                  <div class="button-row button-row1">
                                     <button class="button btn-phone"><span><i class="feather-phone-call"></i></span><a href="tel:+923331003473" style="color: #fff;"> Call Us</a></button>
                                     <button class="button btn-whataspp">
@@ -682,7 +682,7 @@
                                        Mercedes
                                     </h3>
                                  </div>
-                                 <p style="text-align: center;">Available for Rent, Tours & Events Pic & Drop</p><br>
+                                 <p style="text-align: center;">Available For Rent, Tour's, Event's, Pick & Drop</p><br>
                                  <div class="button-row button-row1">
                                     <button class="button btn-phone"><span><i class="feather-phone-call"></i></span><a href="tel:+923331003473" style="color: #fff;"> Call Us</a></button>
                                     <button class="button btn-whataspp">
@@ -823,14 +823,14 @@
                            <span>12+ years of experiences</span>
                         </div>
                         <div class="abt-img">
-                           <img src="assets/img/Zarinsolutionsbanner.jpg" class="img-fluid" alt="Zarinsolutions Goa bannerimage">
+                           <img src="assets/img/Zarinsolutionsbanner.jpg" class="img-fluid" alt="Zarinsolutions Pakistan bannerimage">
                         </div>
                      </div>
                   </div>
                   <div class="col-lg-6" data-aos="fade-down">
                      <div class="about-content">
                         <h6>ABOUT HAIDER CAR RENTAL</h6>
-                        <h2>We are the first rental company in Pakistan to introducecustom high-end normal and luxury cars in Pakistan.</h2>
+                        <h2>We are the first rental company in Pakistan to introduce custom high-end normal and luxury cars in Pakistan.</h2>
                         <p>Discover the freedom to explore at your own pace with our diverse fleet of well-maintained vehicles, ranging from sleek sedans to spacious SUVs and reliable minivans. Whether you're embarking on a solo road trip, a family vacation, or a business excursion, we have the perfect ride to suit your needs.</p>
                         <p>Our commitment to excellence extends beyond just providing transportation. With Haider Car Rental & Tours, you gain access to a team of dedicated professionals who are passionate about crafting unforgettable travel experiences. From expertly crafted itineraries to insider tips on hidden gems along the way, we're here to make your journey seamless and stress-free.</p>
                      </div>
@@ -845,7 +845,7 @@
             <div class="container">
                <div class="section-heading" data-aos="fade-down">
                   <h2>Why Choose Us</h2>
-                  <p>Find the perfect exotic rental in goa, so you can roll in style.</p>
+                  <p>Reliable rides, unbeatable prices – your journey, our commitment. Choose us for premier car rentals in Pakistan.</p>
                </div>
                <div class="services-work">
                   <div class="row">
@@ -1178,13 +1178,13 @@
             <div class="container">
                <div class="section-heading" data-aos="fade-down">
                   <h2>Pickup & Drop Point</h2>
-                  <!-- <p>Note: No pick/drop available in South Goa.</p> -->
+                  <!-- <p>Note: No pick/drop available in South Pakistan.</p> -->
                </div>
                <div class="row">
                   <!-- <div class="col-lg-3 d-flex col-md-6 col-12" data-aos="fade-down">
                      <div class="price-card price-selected flex-fill">
                         <div class="price-head">
-                           <h2>NORTH GOA PICKUP & DROP POINT</h2>
+                           <h2>NORTH Pakistan PICKUP & DROP POINT</h2>
                           
                         </div>
                        
@@ -1285,9 +1285,6 @@
 						   <li><span><i class="fa-solid fa-circle-check"></i></span>Rs. 1000/- car wash/service charged for any car decorations in wedding, events etc.</li>
 						   <li><span><i class="fa-solid fa-circle-check"></i></span>Do not call/deal with drivers for reservations and inquires. Always call directly to Haider Car Rental & Tours for bookings.</li>
                            <li><span><i class="fa-solid fa-circle-check"></i></span><strong>PLEASE NOTE: </strong>Incase of any complain contact directly to office representative.</li>
-                           <p class="mb-0" data-aos="fade-down">If the vehicle return timings crosses 9:15 am by any reasons, full amount of daily rental will be
-                              I  deducted and no vehicle or any other service will be provided  in return of the amount deducted.
-                           </p>
                         </ul>
                      </div>
                   </div>
@@ -1303,7 +1300,7 @@
                            <div class="col-lg-12 col-md-6">
                               <div class="footer-widget footer-menu">
                                  <h5 class="footer-title">Haider Car Rental & Tours</h5>
-                                 <p style="color:#fff;">we're more than just a car rental company—we're your partners in exploration. Let our expert team craft personalized tour packages tailored to your interests, ensuring you experience the best each destination has to offer. From historic landmarks to hidden gems, we'll guide you on a journey of discovery and delight.<br>With Haider Car Rental & Tours, the world is yours to explore. Let us be your trusted companions on the road to unforgettable memories.</p>
+                                 <p style="color:#fff;">We're more than just a car rental company—we're your partners in exploration. Let our expert team craft personalized tour packages tailored to your interests, ensuring you experience the best each destination has to offer. From historic landmarks to hidden gems, we'll guide you on a journey of discovery and delight.<br>With Haider Car Rental & Tours, the world is yours to explore. Let us be your trusted companions on the road to unforgettable memories.</p>
                               </div>
                            </div>
                         </div>
