--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
    <body>
       <div class="main-wrapper">
          <header class="header">
+		 <p style="color:white;"><marquee direction="right"><strong>بِسْمِ اللهِ الرَّحْمٰنِ الرَّحِيْمِ ❁ اللَّهُمَّ صَلِّ عَلَىٰ مُحَمَّدٍ وَعَلَىٰ آلِ مُحَمَّدٍ ❁ كَمَا صَلَّيْتَ عَلَىٰ إِبْرَاهِيْمَ وَعَلَىٰ آلِ إِبْرَاهِيْمَ ❁ إنَّكَ حَمِيْدٌ مَجِيْدٌ ❁ اللَّهُمَّ بَارِكْ عَلَىٰ مُحَمَّدٍ وَعَلَىٰ آلِ مُحَمَّدٍ ❁ كَمَا بَارَكْتَ عَلَىٰ إِبْرَاهِيْمَ وَعَلَىٰ آلِ إِبْرَاهِيْمَ ❁ إنَّكَ حَمِيْدٌ مَجِيْدٌ</strong></marquee></p>
             <div class="container-fluid">
                <nav class="navbar navbar-expand-lg header-nav">
                   <div class="navbar-header">
