--- a/index.html
+++ b/index.html
@@ -55,6 +55,15 @@
         };
       </script>
    <!-- PWA Config End -->
+   <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-11485886280"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-11485886280');
+</script>
    </head>
    <body>
       <div class="main-wrapper">
