--- a/index.html
+++ b/index.html
@@ -18,10 +18,17 @@
       <link rel="stylesheet" href="assets/plugins/aos/aos.css">
       <link rel="stylesheet" href="assets/css/feather.css">
       <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
-      <link rel="stylesheet" href="assets/css/style.css">
-      <!-- Global site tag (gtag.js) - Google Ads: 701284172 -->
-      
-      <!-- Global site tag (gtag.js) - Google Analytics -->      
+      <link rel="stylesheet" href="assets/css/style.css">     
+ <!-- Google tag (gtag.js) Start -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-11485886280"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-11485886280');
+</script>
+   <!-- Google tag (gtag.js) End -->
    <!-- Preloader Start -->
    <script>
   document.addEventListener("DOMContentLoaded", function () {
@@ -55,15 +62,6 @@
         };
       </script>
    <!-- PWA Config End -->
-   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-11485886280"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'AW-11485886280');
-</script>
    </head>
    <body>
       <div class="main-wrapper">
