update social links

--- a/index.html
+++ b/index.html
@@ -1354,10 +1354,10 @@
                               <h6>Connect with us</h6>
                               <ul class="nav-social">
                                  <li>
-                                    <a href="#" target="_blank"><i class="fa-brands fa-facebook-f fa-facebook fi-icon"></i></a>
+                                    <a href="https://www.facebook.com/profile.php?id=100068392384637&mibextid=ZbWKwL" target="_blank"><i class="fa-brands fa-facebook-f fa-facebook fi-icon"></i></a>
                                  </li>
                                  <li>
-                                    <a href="#" target="_blank"><i class="fab fa-instagram fi-icon"></i></a>
+                                    <a href="https://www.instagram.com/ch.ali.haider.101?utm_source=qr&igsh=MWZlczN2ZTdmdnZiZQ==" target="_blank"><i class="fab fa-instagram fi-icon"></i></a>
                                  </li>                               
                               </ul>
                            </div>
